--- a/The_First_Test/1.2/1.2 program/index.html
+++ b/The_First_Test/1.2/1.2 program/index.html
@@ -1,27 +1,253 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<title>1.2前端网页实战</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
 	</head>
+
 	<body>
 		<div class="header">
-			<div class="top"></div>
-			
-			<div class="logos"></div>
-			<div class="nav"></div>
-			
+			<div class="top">
+				<div class="wp">
+					<div class="l">
+						<span>
+						
+						<a href="index.html">设为首页</a>
+					</span>
+						<span>
+						<a href="index.html">收藏本站</a>
+					</span>
+					</div>
+					<div class="r">
+						<span>
+						2015年5月1日
+					</span>
+						<span>
+						多云16℃/30℃
+					</span>
+					</div>
+
+				</div>
+			</div>
+			<div class="logos">
+				<div class="wp">
+					<div class="logo_l l">
+						<a href="index.html">
+							<img src="images/logo.jpg" alt="1.2个人实战byYHY" /></a>
+					</div>
+
+					<div class="tel r">
+						<span>客服热线：400-000-000</span>
+					</div>
+					<div class="search r">
+						<form action="index.html" method="get">
+							<table border="0" cellspacing="0" cellpadding="0">
+								<tbody>
+									<tr>
+										<td class="s_l"></td>
+										<td class="s_c">
+											<input type="text" name="search" id="s_c_txt" value="" />
+										</td>
+										<td class="s_r">
+											<button type="submit" name="s_bt"></button>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</form>
+					</div>
+				</div>
+			</div>
+			<div class="nav l">
+				<div class="wp">
+					<ul>
+						<li>
+							<a href="index.html">网站首页</a>
+						</li>
+						<li>
+							<a href="index.html">公司简介</a>
+						</li>
+						<li>
+							<a href="index.html">业务描述</a>
+						</li>
+						<li>
+							<a href="index.html">服务范围</a>
+						</li>
+						<li>
+							<a href="index.html">产品中心</a>
+						</li>
+						<li>
+							<a href="index.html">人才管理</a>
+						</li>
+						<li>
+							<a href="index.html">在线留言</a>
+						</li>
+						<li>
+							<a href="index.html">联系我们</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+
 		</div>
 		<div class="cernter">
-			<div class="ad"></div>
-			<div class="summary"></div>
-			<div class="news"></div>
-			<div class="product"></div>
+			<div class="wp">
+				<div class="ad">
+					<img src="images/ad.jpg" />
+
+				</div>
+				<div class="summary l">
+					<div class="tit">
+						<img src="images/summary.jpg" />
+						<span><a href="">More</a></span>
+					</div>
+					<div class="smr_ctt">
+						<img src="images/smr_img.jpg" />
+						<p>
+							YHY做的第一个CSS+html的网页
+						</p>
+						<p>
+							1234567894531234645623阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒！
+						</p>
+						<p>
+							阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒阿斯达斯的撒旦撒。
+						</p>
+					</div>
+
+				</div>
+				<div class="news r">
+					<div class="tit">
+						<img src="images/news_title.jpg" />
+						<span><a href="">More</a></span>
+					</div>
+					<div class="news_ctt">
+						<ul>
+							<li class="a">
+								<a href="index.html">
+									<img src="images/news_img.jpg" />
+									<h3>web前端开发之HTML+CSS基础入门</h3>
+									<p>麦子学院朱朝兵老师带领大家从HTML语法，基本结构到CSS入门DIV+Css布局,通俗易懂 ... ..</p>
+								</a>
+							</li>
+							<li>
+								<a href="index.html">
+									<h3>web前端开发之HTML+CSS基础入门</h3>
+									<span>2015-05-15</span>
+								</a>
+							</li>
+							<li>
+								<a href="index.html">
+									<h3>web前端开发之HTML+CSS基础入门</h3>
+									<span>2015-05-15</span>
+								</a>
+							</li>
+							<li>
+								<a href="index.html">
+									<h3>web前端开发之HTML+CSS基础入门</h3>
+									<span>2015-05-15</span>
+								</a>
+							</li>
+							<li>
+								<a href="index.html">
+									<h3>web前端开发之HTML+CSS基础入门</h3>
+									<span>2015-05-15</span>
+								</a>
+							</li>
+							<li>
+								<a href="index.html">
+									<h3>web前端开发之HTML+CSS基础入门</h3>
+									<span>2015-05-15</span>
+								</a>
+							</li>
+							<li>
+								<a href="index.html">
+									<h3>web前端开发之HTML+CSS基础入门</h3>
+									<span>2015-05-15</span>
+								</a>
+							</li>
+						</ul>
+
+					</div>
+				</div>
+			</div>
+
+			<div class="product">
+				<div class="wp">
+					<div class="tit">
+						<img src="images/recommend.jpg" />
+						<span><a href="">More</a></span>
+					</div>
+					<div class="p_ctt">
+						<ul>
+							<li>
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li>
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li>
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li>
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li>
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li class="mr_0">
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li>
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li>
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li>
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li>
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li>
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+							<li class="mr_0">
+								<a href="index.html"><img src="images/product_2.jpg" /><span>Web前端开发</span></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</div>
+		
+		<div class="cl"></div>
 		<div class="bottom">
-			<div class="connection"></div>
-			<div class="link"></div>
+			<div class="wp">
+				<div class="b_t">
+					<span class="l">		
+						<a href="">关于我们</a> |
+						<a href="">联系我们</a> |
+						<a href="">加入我们</a> |
+						<a href="">给我留言</a>
+						</span>
+					<span class="r">© 2015 麦子学院版权所有 ICP证:蜀ICP备13000000号-1</span>
+				</div>
+				<div class="b_b">
+					<p>
+						友情连接：
+						<a href="https://blockchain.info" target="_blank">blockchain</a>
+						<a href="" target="_blank">网址1</a>
+						<a href="" target="_blank">网址2</a>
+					</p>
+					
+
+				</div>
+			</div>
 		</div>
+
 	</body>
+
 </html>
