--- a/The_First_Test/1.2/1.2 program/index.html
+++ b/The_First_Test/1.2/1.2 program/index.html
@@ -247,7 +247,12 @@
 				</div>
 			</div>
 		</div>
-
+		
+		<div class="f_window">
+			<a href="#top">
+				<img src="images/btt.jpg" alt="浮动窗口"/>
+			</a>
+		</div>
 	</body>
 
 </html>
